welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:17: error: illegal start of simple pattern
		compteur=compteur+1
                        ^Runner:19: error: '<-' expected but '}' found.
	}
        ^