welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var compteur=1

for (compteur <- 1 to 40)
{
	if (!estFaceMur())
	{
		for (avance()
		avance()
		avance()
		avance()
		avance()
		avance()
		avance()
		avance()	
		gauche()
		compteur=compteur+1
		
	}
}
